# resume-me

./: .flake8  .gitignore  pyproject.toml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: asgi.py  settings.py  wsgi.py
