[project]
name = "resume-me"
version = "0.1.0"
description = ""
authors = [
    {name = "welli7ngton",email = "welli7ngton.dev@gmail.com"}
]
readme = "resume-me/README.md"
requires-python = ">=3.10,<4.0"  
dependencies = [
    "flake8 (>=7.1.1,<8.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
runserver = {cmd = 'python3 backend/manage.py runserver', help = 'run django server'}
